<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_textview" />

    <EditText
        android:id="@+id/registerEmail"
        style="@style/EditTextBlue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/email_hint_italic"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/TextViewBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password_textview" />

    <EditText
        android:id="@+id/registerPassword"
        style="@style/EditTextBlue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/password_hint_italic"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <TextView
        style="@style/TextViewBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password_textview" />

    <EditText
        android:id="@+id/registerPasswordCompare"
        style="@style/EditTextBlue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/password_hint_italic"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registrationButton"
        style="@style/ButtonFilledWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

</LinearLayout>
